--- a/Source/iOS/DolphiniOS/DolphiniOS/Base.lproj/Main.storyboard
+++ b/Source/iOS/DolphiniOS/DolphiniOS/Base.lproj/Main.storyboard
@@ -17,14 +17,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="softwareCell" id="cuK-jA-XsU" customClass="SoftwareTableViewCell">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.333332061767578"/>
+                                <rect key="frame" x="0.0" y="28" width="375" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cuK-jA-XsU" id="Mqu-IR-Hll">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.333332061767578"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.666667938232422"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nfc-i9-ORm">
-                                            <rect key="frame" x="16" y="10.999999999999998" width="343" height="21.333333333333329"/>
+                                            <rect key="frame" x="16" y="11.000000000000002" width="343" height="21.666666666666671"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -70,7 +70,7 @@
         <scene sceneID="IZf-BQ-YuK">
             <objects>
                 <navigationController id="9db-Gg-8BZ" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Games" image="ic_settings_gcpad" id="9X2-kc-x4w"/>
+                    <tabBarItem key="tabBarItem" title="Games" image="SF_gamecontroller" id="9X2-kc-x4w"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="Fk8-nd-EuK">
                         <rect key="frame" x="0.0" y="44" width="375" height="96"/>
@@ -117,7 +117,7 @@
         <scene sceneID="8Hm-gg-Nyw">
             <objects>
                 <navigationController id="mPi-hn-CQa" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Settings" image="ic_settings_core" id="5gb-G7-eot"/>
+                    <tabBarItem key="tabBarItem" title="Settings" image="SF_gear" id="5gb-G7-eot"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zA4-TF-ey1">
                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
@@ -133,7 +133,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="ic_settings_core" width="24" height="24"/>
-        <image name="ic_settings_gcpad" width="24" height="24"/>
+        <image name="SF_gamecontroller" width="24" height="15"/>
+        <image name="SF_gear" width="19" height="19"/>
     </resources>
 </document>
