--- a/Source/iOS/DolphiniOS/DolphiniOS/Base.lproj/LaunchScreen.storyboard
+++ b/Source/iOS/DolphiniOS/DolphiniOS/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,9 +13,36 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ip-Lw-Hcy">
+                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="49" id="jlm-zq-JwP"/>
+                                </constraints>
+                                <items>
+                                    <tabBarItem title="Games" image="SF_gamecontroller" id="JWj-px-yTX"/>
+                                    <tabBarItem title="Settings" image="SF_gear" id="DFB-eE-kHd"/>
+                                </items>
+                            </tabBar>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ryS-Jz-kVw">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <items>
+                                    <navigationItem id="tDH-sS-Zm2"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="ryS-Jz-kVw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0Wf-xa-mGg"/>
+                            <constraint firstItem="3ip-Lw-Hcy" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="64a-9r-lp3"/>
+                            <constraint firstItem="ryS-Jz-kVw" firstAttribute="trailing" secondItem="3ip-Lw-Hcy" secondAttribute="trailing" id="Xoq-sB-IFV"/>
+                            <constraint firstItem="ryS-Jz-kVw" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="cE8-yq-pV7"/>
+                            <constraint firstItem="ryS-Jz-kVw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="eSY-nq-In1"/>
+                            <constraint firstItem="ryS-Jz-kVw" firstAttribute="leading" secondItem="3ip-Lw-Hcy" secondAttribute="leading" id="qml-bn-aRP"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -22,4 +51,8 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="SF_gamecontroller" width="24" height="15"/>
+        <image name="SF_gear" width="19" height="19"/>
+    </resources>
 </document>
